DataTransformation Pipeline implemented

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'d:\\\\study\\\\python\\\\part-0\\\\wine-prediction\\\\research'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'d:\\\\study\\\\python\\\\part-0\\\\wine-prediction'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,19 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2025-01-08 23:21:24,959 ] 31 WinePrediction_logger - INFO - yaml file: config\\config.yaml loaded successfully\n",
-      "[ 2025-01-08 23:21:24,959 ] 31 WinePrediction_logger - INFO - yaml file: params.yaml loaded successfully\n",
-      "[ 2025-01-08 23:21:24,959 ] 31 WinePrediction_logger - INFO - yaml file: schema.yaml loaded successfully\n",
-      "[ 2025-01-08 23:21:24,966 ] 51 WinePrediction_logger - INFO - created directory at: artifacts\n",
-      "[ 2025-01-08 23:21:24,967 ] 51 WinePrediction_logger - INFO - created directory at: artifacts/data_ingestion\n",
-      "[ 2025-01-08 23:21:26,105 ] 13 WinePrediction_logger - INFO - artifacts/data_ingestion/data.zip download! with following info: \n",
+      "[ 2025-01-09 11:37:46,808 ] 31 WinePrediction_logger - INFO - yaml file: config\\config.yaml loaded successfully\n",
+      "[ 2025-01-09 11:37:46,810 ] 31 WinePrediction_logger - INFO - yaml file: params.yaml loaded successfully\n",
+      "[ 2025-01-09 11:37:46,811 ] 31 WinePrediction_logger - INFO - yaml file: schema.yaml loaded successfully\n",
+      "[ 2025-01-09 11:37:46,812 ] 51 WinePrediction_logger - INFO - created directory at: artifacts\n",
+      "[ 2025-01-09 11:37:46,812 ] 51 WinePrediction_logger - INFO - created directory at: artifacts/data_ingestion\n",
+      "[ 2025-01-09 11:37:47,790 ] 13 WinePrediction_logger - INFO - artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 23329\n",
       "Cache-Control: max-age=300\n",
@@ -196,19 +196,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 968E:3CB4EE:1C376:25AC5:677EBB1C\n",
+      "X-GitHub-Request-Id: C858:394FFF:57DAA:95C77:677F4FF2\n",
       "Accept-Ranges: bytes\n",
-      "Date: Wed, 08 Jan 2025 17:51:25 GMT\n",
+      "Date: Thu, 09 Jan 2025 06:07:47 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-del21734-DEL\n",
-      "X-Cache: MISS\n",
+      "X-Served-By: cache-del21723-DEL\n",
+      "X-Cache: HIT\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1736358685.927992,VS0,VE295\n",
+      "X-Timer: S1736402867.093731,VS0,VE273\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: d1dc880a21d83f946ab183c4d8dc4a624a92cef8\n",
-      "Expires: Wed, 08 Jan 2025 17:56:25 GMT\n",
+      "X-Fastly-Request-ID: 8ef479f99da741274cce7dfd2b26726ee88a3811\n",
+      "Expires: Thu, 09 Jan 2025 06:12:47 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "\n"
