--- a/research/04__model_trainer.ipynb
+++ b/research/04__model_trainer.ipynb
@@ -47,13 +47,15 @@
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
-    "\n",
     "@dataclass(frozen=True)\n",
-    "class DataValidationConfig:\n",
+    "class ModelTrainerConfig:\n",
     "    root_dir: Path\n",
-    "    STATUS_FILE: str\n",
-    "    unzip_data_dir: Path\n",
-    "    all_schema: dict"
+    "    train_data_path: Path\n",
+    "    test_data_path: Path\n",
+    "    model_name: str\n",
+    "    alpha: float\n",
+    "    l1_ratio: float\n",
+    "    target_column: str"
    ]
   },
   {
@@ -87,20 +89,27 @@
     "\n",
     "\n",
     "    \n",
-    "    def get_data_validation_config(self) -> DataValidationConfig:\n",
-    "        config = self.config.data_validation\n",
-    "        schema = self.schema.COLUMNS\n",
+    "    \n",
+    "    \n",
+    "    def get_model_trainer_config(self) -> ModelTrainerConfig:\n",
+    "        config = self.config.model_trainer\n",
+    "        params = self.params.ElasticNet\n",
+    "        schema =  self.schema.TARGET_COLUMN\n",
     "\n",
     "        create_directories([config.root_dir])\n",
     "\n",
-    "        data_validation_config = DataValidationConfig(\n",
+    "        model_trainer_config = ModelTrainerConfig(\n",
     "            root_dir=config.root_dir,\n",
-    "            STATUS_FILE=config.STATUS_FILE,\n",
-    "            unzip_data_dir = config.unzip_data_dir,\n",
-    "            all_schema=schema,\n",
+    "            train_data_path = config.train_data_path,\n",
+    "            test_data_path = config.test_data_path,\n",
+    "            model_name = config.model_name,\n",
+    "            alpha = params.alpha,\n",
+    "            l1_ratio = params.l1_ratio,\n",
+    "            target_column = schema.name\n",
+    "            \n",
     "        )\n",
     "\n",
-    "        return data_validation_config"
+    "        return model_trainer_config"
    ]
   },
   {
@@ -109,9 +118,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
     "import os\n",
     "from WinePrediction import logger\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.linear_model import ElasticNet\n",
+    "import joblib"
    ]
   },
   {
@@ -120,36 +132,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DataValiadtion:\n",
-    "    def __init__(self, config: DataValidationConfig):\n",
+    "class ModelTrainer:\n",
+    "    def __init__(self, config: ModelTrainerConfig):\n",
     "        self.config = config\n",
     "\n",
+    "\n",
     "    \n",
-    "    def validate_all_columns(self)-> bool:\n",
-    "        try:\n",
-    "            validation_status = None\n",
+    "    def train(self):\n",
+    "        train_data = pd.read_csv(self.config.train_data_path)\n",
+    "        test_data = pd.read_csv(self.config.test_data_path)\n",
     "\n",
-    "            data = pd.read_csv(self.config.unzip_data_dir)\n",
-    "            all_cols = list(data.columns)\n",
     "\n",
-    "            all_schema = self.config.all_schema.keys()\n",
+    "        train_x = train_data.drop([self.config.target_column], axis=1)\n",
+    "        test_x = test_data.drop([self.config.target_column], axis=1)\n",
+    "        train_y = train_data[[self.config.target_column]]\n",
+    "        test_y = test_data[[self.config.target_column]]\n",
     "\n",
-    "            \n",
-    "            for col in all_cols:\n",
-    "                if col not in all_schema:\n",
-    "                    validation_status = False\n",
-    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
-    "                        f.write(f\"Validation status: {validation_status}\")\n",
-    "                else:\n",
-    "                    validation_status = True\n",
-    "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
-    "                        f.write(f\"Validation status: {validation_status}\")\n",
     "\n",
-    "            return validation_status\n",
-    "        \n",
-    "        except Exception as e:\n",
-    "            raise e"
+    "        lr = ElasticNet(alpha=self.config.alpha, l1_ratio=self.config.l1_ratio, random_state=42)\n",
+    "        lr.fit(train_x, train_y)\n",
+    "\n",
+    "        joblib.dump(lr, os.path.join(self.config.root_dir, self.config.model_name))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -160,22 +171,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2025-01-09 11:37:58,290 ] 31 WinePrediction_logger - INFO - yaml file: config\\config.yaml loaded successfully\n",
-      "[ 2025-01-09 11:37:58,291 ] 31 WinePrediction_logger - INFO - yaml file: params.yaml loaded successfully\n",
-      "[ 2025-01-09 11:37:58,293 ] 31 WinePrediction_logger - INFO - yaml file: schema.yaml loaded successfully\n",
-      "[ 2025-01-09 11:37:58,294 ] 51 WinePrediction_logger - INFO - created directory at: artifacts\n",
-      "[ 2025-01-09 11:37:58,295 ] 51 WinePrediction_logger - INFO - created directory at: artifacts/data_validation\n"
+      "[ 2025-01-09 11:41:13,637 ] 31 WinePrediction_logger - INFO - yaml file: config\\config.yaml loaded successfully\n",
+      "[ 2025-01-09 11:41:13,637 ] 31 WinePrediction_logger - INFO - yaml file: params.yaml loaded successfully\n",
+      "[ 2025-01-09 11:41:13,640 ] 31 WinePrediction_logger - INFO - yaml file: schema.yaml loaded successfully\n",
+      "[ 2025-01-09 11:41:13,640 ] 51 WinePrediction_logger - INFO - created directory at: artifacts\n",
+      "[ 2025-01-09 11:41:13,640 ] 51 WinePrediction_logger - INFO - created directory at: artifacts/model_trainer\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
-    "    data_validation_config = config.get_data_validation_config()\n",
-    "    data_validation = DataValiadtion(config=data_validation_config)\n",
-    "    data_validation.validate_all_columns()\n",
+    "    model_trainer_config = config.get_model_trainer_config()\n",
+    "    model_trainer_config = ModelTrainer(config=model_trainer_config)\n",
+    "    model_trainer_config.train()\n",
     "except Exception as e:\n",
-    "    raise e\n"
+    "    raise e"
    ]
   }
  ],
