--- a/research/05__model_evaluation.ipynb
+++ b/research/05__model_evaluation.ipynb
@@ -48,13 +48,12 @@
     "from pathlib import Path\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class ModelTrainerConfig:\n",
+    "class ModelEvaluationConfig:\n",
     "    root_dir: Path\n",
-    "    train_data_path: Path\n",
     "    test_data_path: Path\n",
-    "    model_name: str\n",
-    "    alpha: float\n",
-    "    l1_ratio: float\n",
+    "    model_path: Path\n",
+    "    all_params: dict\n",
+    "    metric_file_name: Path\n",
     "    target_column: str"
    ]
   },
@@ -65,12 +64,29 @@
    "outputs": [],
    "source": [
     "from WinePrediction.constants import *\n",
-    "from WinePrediction.utils.common import create_directories,read_yaml"
+    "from WinePrediction.utils.common import create_directories,read_yaml,save_json"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "config\\config.yaml params.yaml schema.yaml\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(CONFIG_FILE_PATH,PARAMS_FILE_PATH,SCHEMA_FILE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,44 +102,24 @@
     "        self.schema = read_yaml(schema_filepath)\n",
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
-    "\n",
-    "\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    def get_model_trainer_config(self) -> ModelTrainerConfig:\n",
-    "        config = self.config.model_trainer\n",
+    "    def get_model_evaluation_config(self) -> ModelEvaluationConfig:\n",
+    "        config = self.config.model_evaluation\n",
     "        params = self.params.ElasticNet\n",
     "        schema =  self.schema.TARGET_COLUMN\n",
     "\n",
     "        create_directories([config.root_dir])\n",
     "\n",
-    "        model_trainer_config = ModelTrainerConfig(\n",
+    "        model_evaluation_config = ModelEvaluationConfig(\n",
     "            root_dir=config.root_dir,\n",
-    "            train_data_path = config.train_data_path,\n",
-    "            test_data_path = config.test_data_path,\n",
-    "            model_name = config.model_name,\n",
-    "            alpha = params.alpha,\n",
-    "            l1_ratio = params.l1_ratio,\n",
+    "            test_data_path=config.test_data_path,\n",
+    "            model_path = config.model_path,\n",
+    "            all_params=params,\n",
+    "            metric_file_name = config.metric_file_name,\n",
     "            target_column = schema.name\n",
-    "            \n",
     "        )\n",
     "\n",
-    "        return model_trainer_config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "import os\n",
-    "from WinePrediction import logger\n",
-    "import pandas as pd\n",
-    "from sklearn.linear_model import ElasticNet\n",
-    "import joblib"
+    "        return model_evaluation_config"
    ]
   },
   {
@@ -132,59 +128,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ModelTrainer:\n",
-    "    def __init__(self, config: ModelTrainerConfig):\n",
-    "        self.config = config\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    def train(self):\n",
-    "        train_data = pd.read_csv(self.config.train_data_path)\n",
-    "        test_data = pd.read_csv(self.config.test_data_path)\n",
-    "\n",
-    "\n",
-    "        train_x = train_data.drop([self.config.target_column], axis=1)\n",
-    "        test_x = test_data.drop([self.config.target_column], axis=1)\n",
-    "        train_y = train_data[[self.config.target_column]]\n",
-    "        test_y = test_data[[self.config.target_column]]\n",
-    "\n",
-    "\n",
-    "        lr = ElasticNet(alpha=self.config.alpha, l1_ratio=self.config.l1_ratio, random_state=42)\n",
-    "        lr.fit(train_x, train_y)\n",
-    "\n",
-    "        joblib.dump(lr, os.path.join(self.config.root_dir, self.config.model_name))"
+    "import os\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from urllib.parse import urlparse\n",
+    "import numpy as np\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ModelEvaluation:\n",
+    "    def __init__(self, config: ModelEvaluationConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    def eval_metrics(self,actual, pred):\n",
+    "        rmse = np.sqrt(mean_squared_error(actual, pred))\n",
+    "        mae = mean_absolute_error(actual, pred)\n",
+    "        r2 = r2_score(actual, pred)\n",
+    "        return rmse, mae, r2\n",
+    "\n",
+    "    \n",
+    "    def save_results(self):\n",
+    "\n",
+    "        test_data = pd.read_csv(self.config.test_data_path)\n",
+    "        model = joblib.load(self.config.model_path)\n",
+    "\n",
+    "        test_x = test_data.drop([self.config.target_column], axis=1)\n",
+    "        test_y = test_data[[self.config.target_column]]\n",
+    "        \n",
+    "        predicted_qualities = model.predict(test_x)\n",
+    "\n",
+    "        (rmse, mae, r2) = self.eval_metrics(test_y, predicted_qualities)\n",
+    "        \n",
+    "        # Saving metrics as local\n",
+    "        scores = {\"rmse\": rmse, \"mae\": mae, \"r2\": r2}\n",
+    "        save_json(path=Path(self.config.metric_file_name), data=scores)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2025-01-09 19:33:45,474 ] 31 WinePrediction_logger - INFO - yaml file: config\\config.yaml loaded successfully\n",
-      "[ 2025-01-09 19:33:45,475 ] 31 WinePrediction_logger - INFO - yaml file: params.yaml loaded successfully\n",
-      "[ 2025-01-09 19:33:45,475 ] 31 WinePrediction_logger - INFO - yaml file: schema.yaml loaded successfully\n",
-      "[ 2025-01-09 19:33:45,479 ] 51 WinePrediction_logger - INFO - created directory at: artifacts\n",
-      "[ 2025-01-09 19:33:45,479 ] 51 WinePrediction_logger - INFO - created directory at: artifacts/model_trainer\n"
+      "[ 2025-01-09 19:34:02,180 ] 31 WinePrediction_logger - INFO - yaml file: config\\config.yaml loaded successfully\n",
+      "[ 2025-01-09 19:34:02,188 ] 31 WinePrediction_logger - INFO - yaml file: params.yaml loaded successfully\n",
+      "[ 2025-01-09 19:34:02,188 ] 31 WinePrediction_logger - INFO - yaml file: schema.yaml loaded successfully\n",
+      "[ 2025-01-09 19:34:02,188 ] 51 WinePrediction_logger - INFO - created directory at: artifacts\n",
+      "[ 2025-01-09 19:34:02,188 ] 51 WinePrediction_logger - INFO - created directory at: artifacts/model_evaluation\n",
+      "[ 2025-01-09 19:34:02,283 ] 65 WinePrediction_logger - INFO - json file saved at: artifacts\\model_evaluation\\metrics.json\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
-    "    model_trainer_config = config.get_model_trainer_config()\n",
-    "    model_trainer_config = ModelTrainer(config=model_trainer_config)\n",
-    "    model_trainer_config.train()\n",
+    "    model_evaluation_config = config.get_model_evaluation_config()\n",
+    "    model_evaluation_config = ModelEvaluation(config=model_evaluation_config)\n",
+    "    model_evaluation_config.save_results()\n",
     "except Exception as e:\n",
     "    raise e"
    ]
